k8s/gateways/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: swa-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: backend.minikube.local
      http:
        paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: auth-service
                  port:
                    number: 80
            - path: /products
              pathType: Prefix
              backend:
                service:
                  name: product-service
                  port:
                    number: 80
